[tool.poetry]
name = "pyrogram-price-fetch"
version = "0.1.0"
description = "Auto-bot to get the rate of a particular cryptocurrency at your request"
authors = ["D. Adamson <0xwebmilk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pyrogram = "^2.0.106"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
